# winrt-component-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
ConsumerApp/: ConsumerApp.csproj  Program.cs
ManagedProjection/: ManagedProjection.csproj
WinRTComponent/: Cargo.toml  build.rs
WinRTComponent/src/: component.idl  component.rs  implementation.rs  lib.rs
WinRTComponent/src/RustComponent/: mod.rs
