[package]
name = "winrt_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.29.0"
features = [
    "build",
    "Win32_System_WinRT"
]

[build-dependencies]
anyhow = "1.0"
cc = "1.0.72"
windows-bindgen = "0.29.0"
